--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 
 header{
   margin: 0 auto;
-  border-bottom: solid #cccccc 2px;
+  border-bottom: solid lightgray 2px;
   background-color: #ffffff;
   height: 100px;
   width: 100%;
@@ -34,13 +34,16 @@ header{
 }
 
 h1 {
-  background-color: #4aaaa5;
+  /*background-color: #4aaaa5;*/
+  background-color: navy;
+  /*opacity: .9;*/
   padding: 25px 33px 25px 33px;
   text-align: center;
-  font-family: 'Georgia', Times, Times New Roman, serif;
+  /*font-family: 'Georgia', Times, Times New Roman, serif;*/
   font-size: 40px;
   font-weight: bold;
-  color:white;
+  font-family: 'Marcellus SC', serif;
+  color:gold;
   height: 98px;
 }
 
@@ -91,15 +94,19 @@ section {
 h2 {
   border-bottom: solid;
   border-bottom-width: 3px;
-  border-bottom-color: lightgray;
-  padding-top: 20px;
+  border-bottom-color: navy;
+  padding-top: 25px;
   padding-bottom: 25px;
   margin-left: 25px;
   margin-right: 25px;
-  color:#4aaaa5;
+  /*color:#4aaaa5;*/
+  color:gold;
+  opacity: .8;
   font-weight: bold;
-  font-size:30px;
-  font-family: 'Georgia', Times, Times New Roman, serif;
+  font-size:40px;
+  font-family: 'Marcellus SC', serif;
+  text-shadow: -1px 0 navy, 0 1px navy, 1px 0 navy, 0 -1px navy;
+  /*font-family: 'Georgia', Times, Times New Roman, serif;*/
 }
 
 #profilepic {
@@ -121,18 +128,21 @@ h2 {
 }
 
 h3 {
-  color:#4aaaa5;
+  /*color:#4aaaa5;*/
+  color:gold;
+  opacity: .8;
   font-weight: bold;
   margin-top: 10px;
   margin-left: 35px;
   margin-right: 30px;
   font-size:20px;
-  font-family: 'Georgia', Times, Times New Roman, serif;
+  /*font-family: 'Georgia', Times, Times New Roman, serif;*/
+  font-family: 'Marcellus SC', serif;
   padding-top:15px;
   padding-bottom: 20px;
   border-bottom: solid;
   border-bottom-width: 2px;
-  border-bottom-color: lightgray;
+  border-bottom-color: navy;
 }
 
 #iconList {
@@ -158,7 +168,7 @@ footer {
   font-size: 12px;
   border-top: solid #ff0000;
   border-top-width: 5px;
-  border-top-color: #4aaaa5;
+  border-top-color: gold;
 }
 
 .site-footer, .footerWrap:after {
@@ -170,77 +180,6 @@ footer {
   padding: 35px;
 }
 
-/* Portfolio CSS*/
-
-.portfolioRow {
-  margin-bottom: 25px;
-  margin-top: 25px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.portfolioImage {
-  position: relative;
-}
-#portfolioImage {
-  position:relative;
-}
-
-.portHead {
-  position: absolute;
-  top: 140px;
-  left: 0px;
-  width:100%;
-  text-align: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  font-family: 'Georgia', Times, Times New Roman, serif;
-  font-size: 20px;
-  color:white;
-  background-color: #4aaaa5;
-}
-
- /* Contact pace CSS */
-#contactform {
-  padding-left:5px;
-  margin:20px;
-  font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
-
-form {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;  
-}
-
-#opac {
-  opacity: .5;
-}
-
-label {
-  padding-bottom:10px;
-  line-height: 2;
-}
-
-input {
-  width:100%;
-  font-size: 20px;
-  border:1px solid #ddd;
-}
-
-input[type=submit] {
-  background-color: #4aaaa5;
-  padding:10px 20px 10px 20px;
-  width: 140px;
-  text-align: center;
-  color:white;
-}
-
-textarea{
-  width:100%;
-  margin-bottom: 10px;
-  height: 100px;
-  border:1px solid #ddd;
-}
 
 /* Media Queries */
 
@@ -291,47 +230,7 @@ textarea{
     padding-bottom: 30px;
   }
 
-  #portfoliostuff {
-    margin: 0 auto;
-    align-items: center;
-  }
-
-  .portfolioRow {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin:0 auto;
-    align-items: center;
-
-    /*border:solid blue 3px;*/
-  }
-
-  .portfolioImage {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    width:100%;
-    position: relative;
-  }
-  #portfolioImage {
-    display: none;
-  }
-
-  .portHead {
-    position: absolute;
-    top: 140px;
-    left: 95px;
-    width: 276px;
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 20px;
-    color:white;
-    background-color: #4aaaa5;
-  }
-
+  
 } /* /980 query */
 
 @media screen and (max-width: 768px) {
@@ -379,39 +278,7 @@ textarea{
     padding-bottom: 30px;
   }
 
-  .portfolioRow {
-    margin-bottom: 25px;
-    margin-top: 25px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-
-  .portfolioImage {
-    position: relative;
-  }
-  #portfolioImage {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    width:100%;
-    position: relative;  }
-
-  .portHead {
-    position: absolute;
-    top: 140px;
-    left: 21px;
-    width:276px;
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 20px;
-    color:white;
-    background-color: #4aaaa5;
-  }
-
+ 
 } /* close Media Query 768 */
 
 @media screen and (max-width: 640px) {
@@ -419,11 +286,11 @@ textarea{
     margin: 0 auto;
     width:100%;
     min-width: 0px;
-    height: 163px;
+    /*height: 163px;*/
   }
 
   h1 {
-    font-size: 30px;
+    font-size: 35px;
   }
 
   #headflex {
@@ -475,52 +342,6 @@ textarea{
     margin:0 auto;
     margin-top: 20px;
     padding-bottom: 30px;
-  }
-
-  #portfoliostuff {
-    margin: 0 auto;
-    align-items: center;
-  }
-
-  .portfolioRow {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin:0 auto;
-    align-items: center;
-  }
-
-  .portfolioImage {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width:276px;
-    margin:0 auto;
-  }
-  #portfolioImage {
-    display: none;
-  }
-
-  .portHead {
-    /*display:initial;*/
-    position: absolute;
-    top: 140px;
-    left: initial;
-    width: 276px;
-
-    /*float:center;*/
-    margin:0 auto;
-    padding: initial;
-    
-    
-    text-align: center;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 20px;
-    color:white;
-    background-color: #4aaaa5;
-    /*z-index: 1;*/
   }
 
 } /*close media query 640 */
